# migration-task-pipeline

./: .gitignore  README.md  auth.example.json  pyproject.toml
configs/: layer-b.example.yaml  layer-c1.example.yaml  layer-c2.example.yaml  layer-d.example.yaml  seed-sources.example.yaml
docs/: abcd-buffer-and-c-layer-design.md  current-pipeline-progress.md  file-management.md  g4-candidate-screening-plan.md  g4-reviewer-rubric.md  seed-collector-v0-plan.md
docs/g4-reviewer/: rubric.en.md
registry/: README.md
scripts/: README.md  check_github_tokens.py  collect_repo_seeds.py  materialize_repos_c1.py  review_candidates_d.py  screen_local_repos_c2.py  screen_repo_candidates_b.py
src/: README.md
src/migration_task_pipeline/: __init__.py  buffers.py  config.py  dedupe.py  github_auth.py  github_metadata.py  github_urls.py  keywords.py  pipeline.py  schema.py
src/migration_task_pipeline/collectors/: conda_forge.py  github_search.py  pypi.py
src/migration_task_pipeline/layers/: __init__.py
templates/: candidate-card.schema.yaml  g4-reviewer-opencode.md  repo-seeds-v0.schema.yaml
tests/: test_b_config.py  test_b_dashboard.py  test_b_github_client.py  test_b_remote_pipeline.py  test_b_remote_scoring.py  test_buffers.py  test_c1_dashboard.py  test_c1_materialization.py  test_c2_config.py  test_c2_dashboard.py  test_c2_pipeline.py  test_c2_scanner_scoring.py  test_cli.py  test_collectors.py  test_config.py  test_d_agent_review.py  test_dedupe.py  test_github_auth.py  test_github_metadata.py  test_github_urls.py  test_pipeline.py
(+35 files in other folders)
